@@ -37,6 +37,10 @@ Bug Fixes:
 - Fixed issue with EntityFind where if a ListCondition with an OR operator
   was passed before passing other conditions then the top-level conditions
   would be OR'ed together instead of AND'ed
+- Fixed issues with Date (without time, ie java.sql.Date) parsing and
+  formatting due to weirdness with time zone and truncating the time part
+  of the Date representation in long millis since epoch; see comments in
+  L10nFacadeImpl.groovy for more details
 
 
 ===========================================================================
